<resources>
    <string name="app_name">Smart Order</string>
    <string name="createAccount">Đăng ký tài khoản</string>
    <string name="account">Tài khoản</string>
    <string name="selectDate">Chọn ngày</string>
    <string name="selectTime">Chọn giờ</string>
    <string name="sl_nopeople">Số người</string>
    <string name="btnNext">Tiếp theo</string>
    <string name="sodienthoai">Số điện thoại</string>
    <string name="tennguoidat">Tên người đặt</string>
    <string name="ghichu">Ghi chú</string>
    <string name="thongtinkhachhang">Thông tin khách hàng</string>
    <string name="goimon">Gọi món</string>
    <string name="register">Đăng ký</string>
    <string name="thongtintaikhoan">Thông tin tài khoản</string>
    <string name="lichsudatban">Lịch sử đặt bàn</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="trangchu">Trang chủ</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="coso">Cơ sở</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="giaotiepvoiquanly">Giao tiếp với Quản lí</string>
    <string name="nhapnoidung">Nhập nội dung</string>
    <string name="hoadon">Hóa đơn</string>
    <string name="confirm">Xác nhận</string>
    <string name="welcome">Xin chào</string>
    <string name="login">Đăng nhập</string>
    <string name="bookatable">Đặt bàn</string>
    <string name="menu">Thực đơn</string>
    <string name="news">Tin tức</string>
    <string name="foodanddrink">Món ngoài</string>
    <string name="firstname">Họ</string>
    <string name="lastname">Tên</string>
    <string name="address">Địa chỉ</string>
    <string name="btnSave">Lưu</string>
    <string name="otpverify">Xác thực OTP</string>
    <string name="enterotp">Nhập mã OTP đã được gửi đến số</string>
    <string name="notreceive">Không nhận được mã OTP ?</string>
    <string name="guilaiotp">Gửi lại OTP</string>
    <string name="bill">Hóa đơn</string>
    <string name="reject">Từ chối</string>
    <string name="accept">Chấp nhận</string>
    <string name="communication">Giao tiếp</string>
    <string name="donthaveacc">Chưa có tài khoản ?</string>
    <string name="FoodName">Tên món</string>
    <string name="FoodQuantity">Số lượng</string>
    <string name="FoodPrice">Đơn giá</string>
    <string name="FoodTotal">Tổng</string>
    <string name="done">Xong</string>
    <string name="chefNotice">Thông Báo</string>
    <string name="chefCommunication">Giao tiếp với Quản lí</string>
    <string name="Giaotiep">Giao Tiếp</string>
    <string name="selectedLanguage">Tiếng Việt</string>
    <string name="quanly">Quản lý : </string>
    <string name="delete">Xóa</string>
    <string name="today">Hôm nay</string>
    <string name="tomorrow">Ngày mai</string>
    <string name="tomorrow1">Ngày kia</string>
    <string name="tomorrow2">Ngày kìa</string>
    <string name="toastGettable">Vui lòng nhập số người</string>
    <string name="cancel">Quay lại</string>
    <string name="accepted">Đã duyệt</string>
    <string name="waitingaccept">Chờ duyệt</string>
    <string name="cooked">Đã sẵn sàng</string>
    <string name="rejected">Bị từ chối</string>
    <string name="channel_name">Smart Order Notification</string>
    <string name="channel_description">Thông báo khi yêu cầu được duyệt</string>
    <string name="gioan">Giờ ăn</string>
    <string name="waitingbill">Chờ thanh toán</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="thanhtien">Thành tiền: </string>
    <string name="floor">" - Tầng "</string>
    <string name="sendpayrequest">Bạn muốn thanh toán ?</string>
    <string name="waitforwaiter">Vui lòng chờ nhân viên phục vụ</string>
    <string name="delivered">Đã ra đồ</string>
    <string name="reason">Lý do : </string>
    <string name="othermess">Ý kiến khác</string>
    <string name="rado">Ra đồ</string>
    <string name="delivery">Ra đồ</string>
    <string name="lichsugoimon">Lịch sử gọi món</string>
    <string name="back">Trở về</string>
    <string name="datban">Đặt bàn</string>
    <string name="home">Trang chủ</string>
    <string name="daphucvu">Đã phục vụ</string>
    <string name="requesttopay">Chờ thanh toán</string>
    <string name="toastinvalidphone">Vui lòng kiểm tra lại số điện thoại</string>
    <string name="toasrequired">Không được để trống</string>
    <string name="toasinvalidotp">Vui lòng kiểm tra lại mã OTP</string>
    <string name="toastInvalidNumer">Số người phải lớn hơn 0</string>
    <string name="tooBigNumer">Số người không được quá 50</string>
    <string name="toastBill">Xác nhận thanh toán thành công</string>
    <string name="toastinvalidorder">Vui lòng chọn đồ</string>
    <string name="yourmess">Bạn :</string>
    <string name="accountBan">Tài khoản của bạn đã bị khóa</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>