<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer.CommunicationActivity">

    <TextView
        android:id="@+id/communication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/giaotiepvoiquanly"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/listview_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/nhapnoidung"
        android:inputType="textMultiLine"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOther" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listview_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="149dp"
        app:layout_constraintBottom_toTopOf="@+id/txtOther"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/communication" />

    <ImageButton

        android:id="@+id/btnSendReason"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/or"
        android:src="@drawable/ic_baseline_send_24"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReason" />

    <TextView
        android:id="@+id/txtOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/othermess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview_data" />


</androidx.constraintlayout.widget.ConstraintLayout>
