<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer.ProfileActivity">

    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/waveHeader"
        android:layout_width="0dp"
        android:layout_height="236dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBar4" />

    <EditText
        android:id="@+id/txtProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/or"
        app:layout_constraintEnd_toEndOf="@+id/txtProfilePhone"
        app:layout_constraintTop_toBottomOf="@+id/txtProfilePhone" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:gravity="start"
        android:text="@string/sodienthoai"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtProfilePhone"
        app:layout_constraintEnd_toStartOf="@+id/txtProfilePhone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="63dp"
        android:gravity="start"
        android:text="@string/lastname"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <EditText
        android:id="@+id/txtProfileAdress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/or"
        app:layout_constraintEnd_toEndOf="@+id/txtProfileName"
        app:layout_constraintTop_toBottomOf="@+id/txtProfileName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="@+id/txtProfileAdress"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <Button
        android:id="@+id/btnSaveUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:backgroundTint="@color/or"
        android:text="@string/btnSave"
        app:layout_constraintStart_toStartOf="@+id/txtProfileAdress"
        app:layout_constraintTop_toBottomOf="@+id/txtProfileAdress" />

    <EditText
        android:id="@+id/txtProfilePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="70dp"
        android:editable="false"
        android:ems="10"
        android:textColor="@color/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="153dp"
        android:layout_height="127dp"
        android:layout_marginTop="194dp"
        android:layout_marginBottom="192dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtProfileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/waveHeader"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>