<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GetTableActivity">
        <com.scwang.wave.MultiWaveHeader
            android:id="@+id/waveHeader"
            android:layout_width="match_parent"
            android:layout_height="239dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:textColor="@color/black"
            android:id="@+id/btnNextAfterTomorrow"
            android:layout_width="143dp"
            android:layout_height="91dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="173dp"
            app:layout_constraintStart_toEndOf="@+id/btnAfterTomorrow"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:textColor="@color/black"
            android:id="@+id/btnAfterTomorrow"
            android:layout_width="143dp"
            android:layout_height="91dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="173dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@+id/btnNextAfterTomorrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:textColor="@color/black"
            android:id="@+id/btnTomorrow"
            android:layout_width="143dp"
            android:layout_height="91dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toEndOf="@+id/btnToday"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnToday"
            android:layout_width="143dp"
            android:layout_height="91dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/btnTomorrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textColor="@color/black"
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="4dp"
            android:text="@string/selectDate"
            app:layout_constraintBottom_toTopOf="@+id/btnToday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textColor="@color/red"
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="25dp"
            android:text="@string/selectTime"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_slTime"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/seekBar_slTime"
            android:layout_width="303dp"
            android:layout_height="41dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="21dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPreviewTime" />

        <TextView
            android:gravity="center"
            android:background="@drawable/border"
            android:id="@+id/txtPreviewTime"
            android:layout_width="133dp"
            android:layout_height="25dp"
            android:layout_marginStart="136dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNextAfterTomorrow" />

        <TextView
            android:textColor="@color/red"
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="78dp"
            android:text="@string/sl_nopeople"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_slTime" />

        <EditText
            android:id="@+id/txtNoPP"
            android:layout_width="101dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_slTime"
            tools:text="@string/sl_nopeople" />

        <Button
            android:background="@drawable/border"

            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/btnNext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/txtNoPP" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>